[gd_scene load_steps=17 format=3 uid="uid://cjwcmg6oabt6b"]

[ext_resource type="Texture2D" uid="uid://ivycemm13k5g" path="res://assets/goblin/goblin_dead_anim_f0.png" id="1_dw0me"]
[ext_resource type="Texture2D" uid="uid://crr4naaohb7i5" path="res://assets/goblin/goblin_idle_anim_f0.png" id="1_i1g33"]
[ext_resource type="Script" path="res://scenes/goblin.gd" id="1_n0fb8"]
[ext_resource type="Texture2D" uid="uid://csdleqsr0ouk7" path="res://assets/goblin/goblin_idle_anim_f1.png" id="2_ic2if"]
[ext_resource type="Texture2D" uid="uid://byr51ewsebjia" path="res://assets/goblin/goblin_idle_anim_f2.png" id="3_44pj6"]
[ext_resource type="Texture2D" uid="uid://b0b252hhpqblo" path="res://assets/goblin/goblin_idle_anim_f3.png" id="4_m312r"]
[ext_resource type="Texture2D" uid="uid://cxepm1xyfjsqv" path="res://assets/goblin/goblin_run_anim_f0.png" id="6_q1owr"]
[ext_resource type="Texture2D" uid="uid://b0bntqf781uep" path="res://assets/goblin/goblin_run_anim_f1.png" id="7_7bwjc"]
[ext_resource type="Texture2D" uid="uid://cs3ftx4d5deob" path="res://assets/goblin/goblin_run_anim_f2.png" id="8_1juo0"]
[ext_resource type="Texture2D" uid="uid://bdqoqxtrriok2" path="res://assets/goblin/goblin_run_anim_f3.png" id="9_s8hub"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3rlew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dw0me")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i1g33")
}, {
"duration": 1.0,
"texture": ExtResource("2_ic2if")
}, {
"duration": 1.0,
"texture": ExtResource("3_44pj6")
}, {
"duration": 1.0,
"texture": ExtResource("4_m312r")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_q1owr")
}, {
"duration": 1.0,
"texture": ExtResource("7_7bwjc")
}, {
"duration": 1.0,
"texture": ExtResource("8_1juo0")
}, {
"duration": 1.0,
"texture": ExtResource("9_s8hub")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4pjtj"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_76ab3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nigp0"]
_data = {
"RESET": SubResource("Animation_76ab3"),
"fade_out": SubResource("Animation_4pjtj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8a5xx"]
size = Vector2(9, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bjjh"]
size = Vector2(9, 10)

[node name="goblin" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_n0fb8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3rlew")
animation = &"idle"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_nigp0")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_8a5xx")

[node name="entrancetimer" type="Timer" parent="."]
wait_time = 1.25
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_5bjjh")

[node name="deathtimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="entrancetimer" to="." method="_on_entrancetimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
